--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     grid-auto-flow: row dense;
     gap: 10px;
+    padding: 15px;
 
 }
 
